testdata/errors/multi-3/syntax.go
package syntaxmulti1

func Foo1(import) {
}
